2005-12-12  Vino Fernando Crescini  <jcrescin@cit.uws.edu.au>

	* Merged with vlad-1_2_2

2005-12-11  Vino Fernando Crescini  <jcrescin@cit.uws.edu.au>

	* Tagging vlad-1_2_2

	* lib/identifier.h :

	  - Fixed error in the VLAD_IDENT_IS_*() macros.

2005-12-11  Vino Fernando Crescini  <jcrescin@cit.uws.edu.au>

	* samples/docrel.vla :
	* samples/docrel.vlp :

	  - Fixed error in the ordering of parameters in the updates.

	* lib/seqtab.cpp :

	  - verify() function now checks whether the replacement identifier
	    is compatible with the variable to be replaced.

	* lib/identifier.h :
	* lib/identifier.cpp :

	  - Changed type from unsigned int to unsigned char.

	  - Added a check_compat() function to check whether a given entity
	    type is compatible for replacing a given variable.

2005-12-10  Vino Fernando Crescini  <jcrescin@cit.uws.edu.au>

	* Merged with vlad-1_2_1

	* Makefile.in :

	  - updatetab.h is now a dependency of seqtab.h.

	* lib/seqtab.cpp :
	* lib/seqtab.h :

	  - The updateref::verify() function now takes a reference to update
	    table so that it can check if the name of the update reference is
	    actually in the update table and that the varlist matches the
	    entity list.

	* lib/updatetab.cpp :
	* lib/updatetab.h :

	  - Cleanup.

	  - In the get() functions, precond and postcond expressions may now
	    be null.

	* lib/polbase.cpp :

	  - add_seqtab() is now passed the update table too for extra checking.

	* docs/bnf_policy.txt :
	* docs/langspecs.txt :

	  - "Ident Declaration" is now "Entity Declaration"

	* main/policy.l :
	* main/policy.y :

	  - Changed "ident" statement to "entity" statement.

	  - Entities and variables are now checked while parsing.

	* lib/identifier.h :
	* lib/identifier.cpp :

	  - Redefined macros in identifier.h. It now has provisions for typed
	    variables.

	  - Added a helper identifier class to validate identifiers.

	  - Entities are now strictly defined as strings that start with a